# CWBVH

./: .gitignore  CMakeLists.txt  README.MD  rtCoreV2.sln
rtCoreV2/: HDRWriter.cu  bvhbuilder.cu  bvhbuilder.h  helper_math.h  output.hdr  progress_bar.h  rtCore.cu  rtCoreV2.vcxproj  rtDebugFunc.h  rtFinalGather.cu  rtHelperFunc.h  rtSurfelSorting.cu  rtSurfelSorting.h  rtTrace.cu  rtTrace.h  rtWarpAggregation.h  sh_lightsample.h  sh_warpreduction.h
src/: CUDAAssert.h  EmbreeBVHBuilder.cpp  EmbreeBVHBuilder.h  FastDeviceMinMax.h  GPUBVHConverter.cpp  GPUBVHConverter.h  Logger.cpp  Logger.h  TraversalKernelBVH2.cu  TraversalKernelBVH2.h  TraversalKernelCWBVH.cu  TraversalKernelCWBVH.h  ValidationKernels.cu  ValidationKernels.h  WoopTriangleHelper.h  helper_math.cu  helper_math.h  main.cpp
src/CMake/: FindEmbree.cmake
